Glad wasn't working before but is now, although I've no idea if I'm generating a good config for it (can always swap out later I suppose).
Added some debug only logging which looks nice for me here in VS2015.

--- a/Jimbo/Jimbo/Jimbo.vcxproj
+++ b/Jimbo/Jimbo/Jimbo.vcxproj
@@ -120,6 +120,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Core\Application.h" />
+    <ClInclude Include="Core\Logging.h" />
     <ClInclude Include="Core\Types.h" />
     <ClInclude Include="Jimbo.h" />
   </ItemGroup>
