--- a/Jimbo/Jimbo/Jimbo.vcxproj.filters
+++ b/Jimbo/Jimbo/Jimbo.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Core\Types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Core\Logging.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Core\Application.cpp">
