--- a/Jimbo/Jimbo/Jimbo.vcxproj
+++ b/Jimbo/Jimbo/Jimbo.vcxproj
@@ -125,28 +125,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Audio\Silent\SilentSound.h" />
-    <ClInclude Include="Audio\irrKlang\irrKlangSound.h" />
-    <ClInclude Include="Audio\Silent\SilentSoundManager.h" />
-    <ClInclude Include="Audio\irrKlang\irrKlangSoundManager.h" />
-    <ClInclude Include="Audio\Sound.h" />
-    <ClInclude Include="Audio\SoundManager.h" />
-    <ClInclude Include="application\application.h" />
-    <ClInclude Include="util\Logging.h" />
-    <ClInclude Include="Graphics\Renderer.h" />
-    <ClInclude Include="Input\glfw\glfwInputManager.h" />
-    <ClInclude Include="Input\InputListener.h" />
-    <ClInclude Include="Input\InputManager.h" />
-    <ClInclude Include="Input\InputSettings.h" />
-    <ClInclude Include="Input\KeyMapping.h" />
-    <ClInclude Include="Event\Event.h" />
-    <ClInclude Include="Event\EventHandler.h" />
-    <ClInclude Include="Event\EventManager.h" />
-    <ClInclude Include="Scene\Scene.h" />
-    <ClInclude Include="Scene\SceneManager.h" />
-    <ClInclude Include="Test\TestEvents.h" />
-    <ClInclude Include="Jimbo.h" />
-    <ClInclude Include="Test\TestScene.h" />
+    <ClInclude Include="Audio\Silent\silentsound.hxx" />
+    <ClInclude Include="Audio\irrKlang\irrklangsound.hxx" />
+    <ClInclude Include="Audio\Silent\silentsoundmanager.hxx" />
+    <ClInclude Include="Audio\irrKlang\irrklangsoundmanager.hxx" />
+    <ClInclude Include="Audio\sound.hpp" />
+    <ClInclude Include="Audio\soundmanager.hpp" />
+    <ClInclude Include="application\application.hpp" />
+    <ClInclude Include="util\logging.hpp" />
+    <ClInclude Include="Graphics\renderer.hpp" />
+    <ClInclude Include="Input\glfw\glfwinputmanager.hxx" />
+    <ClInclude Include="Input\inputlistener.hpp" />
+    <ClInclude Include="Input\inputmanager.hpp" />
+    <ClInclude Include="Input\inputsettings.hpp" />
+    <ClInclude Include="Input\keymapping.hpp" />
+    <ClInclude Include="Event\event.hpp" />
+    <ClInclude Include="Event\eventhandler.hpp" />
+    <ClInclude Include="Event\eventmanager.hpp" />
+    <ClInclude Include="Scene\scene.hpp" />
+    <ClInclude Include="Scene\scenemanager.hpp" />
+    <ClInclude Include="Test\testevents.hpp" />
+    <ClInclude Include="Jimbo.hpp" />
+    <ClInclude Include="Test\testscene.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Audio\irrKlang\irrKlangSound.cpp" />
