--- a/Jimbo/Test/Test.vcxproj.filters
+++ b/Jimbo/Test/Test.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="config.toml" />
+  </ItemGroup>
 </Project>
